# anomaly_detector_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.example.ini  config.ini  log_generator.cpp  makefile  test_memory_integration.cpp  vcpkg.json
config_templates/: development.ini  high_performance.ini  production.ini
data/: allowlist.txt  sample_logs.txt
docs/: CONFIGURATION.md
docs/operations/: deployment-guide.md  operational-runbooks.md  performance-tuning-guide.md  security-hardening-checklist.md  troubleshooting-guide.md
ml/: requirements.txt  train.py
monitoring/: PROMQL_EXAMPLES.md  README.md
monitoring/grafana/alerts/: anomaly-detector-alerts.yml
monitoring/grafana/dashboards/: performance-analysis.json  security-analysis.json  system-overview.json
src/: aho_corasick.cpp  aho_corasick.hpp  alert_manager.cpp  alert_manager.hpp  analysis_engine.cpp  analysis_engine.hpp  analyzed_event.hpp  config.cpp  config.hpp  log_entry.cpp  log_entry.hpp  main.cpp  rule_engine.cpp  rule_engine.hpp  sliding_window.cpp  sliding_window.hpp  stats_tracker.cpp  stats_tracker.hpp  utils.cpp  utils.hpp
src/analysis/: analysis_engine.cpp  analysis_engine.hpp  analyzed_event.hpp  optimized_analysis_engine.hpp  optimized_analysis_engine_wrapper.hpp  optimized_per_ip_state.cpp  optimized_per_ip_state.hpp  optimized_per_path_state.hpp  optimized_per_session_state.hpp  optimized_prometheus_client.hpp  path_state_manager.cpp  path_state_manager.hpp  per_ip_state.hpp  per_path_state.hpp  per_session_state.hpp  prometheus_anomaly_detector.cpp  prometheus_anomaly_detector.hpp  prometheus_client.cpp  prometheus_client.hpp  session_features.cpp  session_features.hpp
src/core/: advanced_compression.cpp  advanced_compression.hpp  advanced_compression_simple.cpp.disabled  advanced_memory_telemetry.cpp  advanced_memory_telemetry.hpp  alert.cpp  alert.hpp  alert_manager.cpp  alert_manager.hpp  batch_processor.hpp  compact_serialization.cpp  compact_serialization.hpp  config.cpp  config.hpp  config_migration.cpp  config_migration.hpp  custom_allocators.cpp  custom_allocators.hpp  dynamic_memory_manager.cpp  dynamic_memory_manager.hpp  log_entry.cpp  log_entry.hpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  memory_profiler_hooks.hpp  metrics_manager.cpp  metrics_manager.hpp  metrics_registry.cpp  metrics_registry.hpp  optimized_config.hpp  optimized_prometheus_metrics_exporter.hpp  performance_validator.cpp  performance_validator.hpp  production_hardening.hpp  production_hardening_simple.cpp.disabled  prometheus_metrics_exporter.cpp  prometheus_metrics_exporter.hpp  real_time_memory_monitor.cpp  real_time_memory_monitor.hpp  (+3 more)
src/detection/: optimized_rule_engine.hpp  rule_engine.cpp  rule_engine.hpp
src/detection/rules/: scoring.hpp
src/io/alert_dispatch/: base_dispatcher.hpp  file_dispatcher.cpp  file_dispatcher.hpp  http_dispatcher.cpp  http_dispatcher.hpp  optimized_alert_dispatchers.hpp  syslog_dispatcher.cpp  syslog_dispatcher.hpp
src/io/db/: mongo_manager.cpp  mongo_manager.hpp  optimized_mongo_manager.hpp
src/io/log_readers/: base_log_reader.hpp  file_log_reader.cpp  file_log_reader.hpp  mongo_log_reader.cpp  mongo_log_reader.hpp  optimized_file_log_reader.hpp
src/io/threat_intel/: dns_cache.cpp  dns_cache.hpp  intel_manager.cpp  intel_manager.hpp  optimized_intel_manager.cpp  (+1 more)
src/learning/: dynamic_learning_engine.cpp  dynamic_learning_engine.hpp  rolling_statistics.cpp  rolling_statistics.hpp  seasonal_model.cpp  seasonal_model.hpp
src/ml_models/: decision_tree.cpp  decision_tree.hpp  feature_manager.cpp  feature_manager.hpp  features.hpp  heuristic_model.cpp  heuristic_model.hpp  random_forest_model.cpp  stub_model.cpp  stub_model.hpp
src/models/: base_model.hpp  decision_tree.cpp  decision_tree.hpp  feature_manager.cpp  feature_manager.hpp  features.cpp  features.hpp  model_data_collector.cpp  model_data_collector.hpp  model_manager.cpp  model_manager.hpp  onnx_model.cpp  onnx_model.hpp  optimized_decision_tree.hpp  optimized_feature_manager.hpp  optimized_model_manager.hpp  optimized_onnx_model.hpp  optimized_random_forest_model.hpp  random_forest_model.cpp  random_forest_model.hpp  seasonal_model.cpp  seasonal_model.hpp
src/rules/: scoring.hpp
src/state/: lru_cache.hpp  persistence_manager.cpp  persistence_manager.hpp  state_manager.cpp  state_manager.hpp  state_serializer.cpp  state_serializer.hpp
src/tools/: config_migrator.cpp
src/utils/: advanced_threading.hpp  aho_corasick.cpp  aho_corasick.hpp  bloom_filter.hpp  circuit_breaker.cpp  circuit_breaker.hpp  error_recovery_manager.cpp  error_recovery_manager.hpp  fast_string_formatting.hpp  graceful_degradation_manager.cpp  graceful_degradation_manager.hpp  json_formatter.cpp  json_formatter.hpp  memory_profiler.cpp  memory_profiler.hpp  optimized_io_buffer_manager.hpp  optimized_sliding_window.hpp  optimized_thread_safe_queue.hpp  performance_monitor.cpp  performance_monitor.hpp  scoped_timer.hpp  simd_optimizations.hpp  sliding_window.hpp  stats_tracker.cpp  stats_tracker.hpp  string_interning.cpp  string_interning.hpp  thread_safe_queue.hpp  ua_parser.cpp  ua_parser.hpp  utils.cpp  utils.hpp
tests/: test_advanced_compression.cpp  test_advanced_memory_telemetry.cpp  test_advanced_threading.cpp  test_alert_dispatchers.cpp  test_alert_manager_metrics.cpp  test_analysis_engine.cpp  test_compact_serialization.cpp  test_config.cpp  test_learning_statistics.cpp  test_learning_statistics_comprehensive.cpp  test_log_parsing.cpp  test_lru.cpp  test_memory_monitoring.cpp  test_optimized_intel_manager.cpp  test_persistence.cpp  test_prometheus_anomaly_detector.cpp  test_prometheus_anomaly_eval.cpp  test_prometheus_client.cpp  test_prometheus_metrics_exporter.cpp  test_rule_engine_metrics.cpp  test_sanity.cpp  test_seasonal_pattern_detection.cpp  test_serialization.cpp  test_sliding_window.cpp  test_state_manager.cpp  test_system_integration.cpp  test_tier4_integration.cpp  test_tier4_integration_fixed.cpp  test_tier4_integration_fixed.cpp.disabled  test_utils.cpp
(+21 files in other folders)
